--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "screen:new": "npx ts-node src/scripts/createScreen.ts"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
